--- a/symfony/app/Resources/views/layout.html.twig
+++ b/symfony/app/Resources/views/layout.html.twig
@@ -1,8 +1,7 @@
 {% extends '::base.html.twig' %}
 {% block body %}
-    <div id="pojemnik">
-        {% block content %}
-        {% endblock %}
-        <div id="stopka"></div>
-    </div>
+<div id="pojemnik">
+    <h1 id="logo"><a href="{{ path('homepage') }}">Piosenki wojskowe</a></h1>
+    {% block content %}{% endblock %}
+</div>
 {% endblock %}
