--- a/symfony/app/Resources/views/base.html.twig
+++ b/symfony/app/Resources/views/base.html.twig
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <meta charset="UTF-8" />
+    <title>{% block title %}Piosenki wojskowe{% endblock %}</title>
     <link rel="stylesheet" href="{{ asset('css/style.css') }}" />
 </head>
 <body>
