--- a/symfony/web/css/style.css
+++ b/symfony/web/css/style.css
@@ -1,41 +1,66 @@
 body {
-    background: white;
-    font-family: "Trebuchet MS", sans-serif;
-    margin: 40px;
+    background: #f4f4f4;
+    font-family: Georgia, serif;
+    font-size: 100%;
+    margin: 0;
+    padding: 0;
+    line-height: 200%;
 }
 #pojemnik {
-    width: 920px;
+    width: 900px;
     margin: 0 auto;
-    background: #8bc3f4;
+    background: #f4f4f4 url('../images/gora.jpg') top center no-repeat;
+
 }
-h1 {
-    width: 920px;
-    height: 200px;
-    background: url('../images/logo.png') no-repeat;
+#logo {
+    margin: 0;
+    padding: 0;
+    width: 900px;
+    height: 250px;
+    background: url('../images/logo.jpg') no-repeat;
     text-indent: -2000em;
 }
-#stopka {
-    width: 920px;
+
+#logo a {
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 900px;
     height: 250px;
+}
+
+#logo a:hover {
+    background: url('../images/logo-on.jpg') no-repeat;
+}
+
+#stopka {
+    margin: 0;
+    padding: 0;
+    width: 900px;
+    height: 370px;
     background: url('../images/stopka.jpg') no-repeat;
-
-}
-table {
-    margin: 20px auto;
-    border-collapse: collapse;
-    border: 1px solid black;
-    background: #e0effe;
 }
 
-td {
-    margin: 10px;
-    padding: 10px 40px;
-    border: 1px solid black;
+#tresc {
+    width: 40%;
+    margin: 0 auto;
+    margin-top: 50px;
 }
-th {
-    margin: 10px;
-    padding: 10px 40px;
-    border: 1px solid black;
-    background: #043362;
-    color: #e0effe;
+
+#menu {
+    font-variant: small-caps;
+    width: 40%;
+    margin: 0 auto;
+
+    margin-top: 50px;
+    
+}
+
+#menu a {
+    color: black;
+    text-decoration: none;
+}
+
+#menu a:hover {
+    text-decoration: underline;
 }
