render menu controller

--- a/symfony/app/Resources/views/base.html.twig
+++ b/symfony/app/Resources/views/base.html.twig
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>{% block title %}Piosenki wojskowe{% endblock %}</title>
-    <link rel="stylesheet" href="{{ asset('css/style.css') }}" />
+    <title>{% block title %}Jan Kochanowski: Treny{% endblock %}</title>
+    <link rel="stylesheet" href="{{ asset("css/style.css") }}" />
 </head>
 <body>
 {% block body %}{% endblock %}
