--- a/symfony/app/Resources/views/layout.html.twig
+++ b/symfony/app/Resources/views/layout.html.twig
@@ -1,7 +1,14 @@
-{% extends '::base.html.twig' %}
+{% extends "::base.html.twig" %}
 {% block body %}
-<div id="pojemnik">
-    <h1 id="logo"><a href="{{ path('homepage') }}">Piosenki wojskowe</a></h1>
-    {% block content %}{% endblock %}
-</div>
+    <div id="pojemnik">
+        <h1>Jan Kochanowski</h1>
+        <h2><a href="{{ path('homepage') }}">Treny</a></h2>
+        {% render controller("MyFrontend5Bundle:Default:menu") %}
+        <div id="tresc">
+            {% block contents %}
+            {% endblock %}
+            </p>
+        </div>
+        <br class="clear" />
+    </div>
 {% endblock %}
