--- a/symfony/web/css/style.css
+++ b/symfony/web/css/style.css
@@ -1,66 +1,42 @@
 body {
-    background: #f4f4f4;
     font-family: Georgia, serif;
-    font-size: 100%;
-    margin: 0;
-    padding: 0;
-    line-height: 200%;
+    font-size: medium;
+    background: black;
+    color: white;
+    line-height: 150%;
+    margin: 100px;
+}
+h1 {
+    text-align: center;
+}
+h2 {
+    text-align: center;
+    margin-bottom: 100px;
+}
+h3 {
+    padding-left: 80px;
+
 }
 #pojemnik {
-    width: 900px;
-    margin: 0 auto;
-    background: #f4f4f4 url('../images/gora.jpg') top center no-repeat;
-
+    width: 700px;
+    margin: 30px auto;
+    font-size: 80%;
 }
-#logo {
+ul {
+    width: 150px;
+    float: left;
     margin: 0;
-    padding: 0;
-    width: 900px;
-    height: 250px;
-    background: url('../images/logo.jpg') no-repeat;
-    text-indent: -2000em;
+    list-style-type: none;
 }
-
-#logo a {
-    display: block;
-    margin: 0;
-    padding: 0;
-    width: 900px;
-    height: 250px;
-}
-
-#logo a:hover {
-    background: url('../images/logo-on.jpg') no-repeat;
-}
-
-#stopka {
-    margin: 0;
-    padding: 0;
-    width: 900px;
-    height: 370px;
-    background: url('../images/stopka.jpg') no-repeat;
-}
-
 #tresc {
-    width: 40%;
-    margin: 0 auto;
-    margin-top: 50px;
+    width: 500px;
+    float: right;
+    margin: 0;
 }
-
-#menu {
-    font-variant: small-caps;
-    width: 40%;
-    margin: 0 auto;
-
-    margin-top: 50px;
-    
+a {
+    color: white;
+    background: black;
 }
-
-#menu a {
-    color: black;
-    text-decoration: none;
-}
-
-#menu a:hover {
-    text-decoration: underline;
+.clear {
+    clear: both;
 }
