--- a/symfony/web/css/style.css
+++ b/symfony/web/css/style.css
@@ -1,42 +1,63 @@
 body {
-    font-family: Georgia, serif;
-    font-size: medium;
-    background: black;
-    color: white;
-    line-height: 150%;
-    margin: 100px;
+    font-family: "Trebuchet MS", sans-serif;
 }
-h1 {
+
+#wrapper {
+    width: 400px;
+    margin: 0 auto;
     text-align: center;
 }
-h2 {
+
+#stopka {
+    clear: both;
     text-align: center;
-    margin-bottom: 100px;
+    font-size: 70%;
+    margin: 20px;
+    padding: 20px;
 }
-h3 {
-    padding-left: 80px;
+
+#stopka a {
 
 }
-#pojemnik {
-    width: 700px;
-    margin: 30px auto;
-    font-size: 80%;
-}
-ul {
-    width: 150px;
-    float: left;
-    margin: 0;
-    list-style-type: none;
-}
-#tresc {
-    width: 500px;
-    float: right;
-    margin: 0;
-}
-a {
-    color: white;
-    background: black;
-}
-.clear {
+
+table {
+    border-collapse: collapse;
+    margin: 0 auto;
+    text-align: left;
     clear: both;
+    border: 1px solid #f4f4f4;
 }
+
+td {
+    padding: 2px 20px;
+}
+
+th {
+    border: 1px solid black;
+    padding: 2px 20px;
+    background: #023d60;
+    color: #d8f0fe;
+    text-align: center;
+}
+
+
+
+.c {
+    text-align: center;
+}
+
+
+.b {
+    background: #f4f4f4;
+}
+
+
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
