--- a/symfony/src/My/Frontend6Bundle/Resources/views/Default/index.html.twig
+++ b/symfony/src/My/Frontend6Bundle/Resources/views/Default/index.html.twig
@@ -8,7 +8,7 @@
     </tr>
     </thead>
     <tbody>
-    {% set klasy = ['a', 'b'] %}
+    {% set klasy = ['a', 'b'] %}z
     {% for entity in entities %}
         <tr class="{{ cycle(klasy, loop.index) }}">
             <td>
