--- a/symfony3/src/My/FrontendBundle/Resources/views/Aktor/index.html.twig
+++ b/symfony3/src/My/FrontendBundle/Resources/views/Aktor/index.html.twig
@@ -1,18 +1,6 @@
 {% extends "::layout.html.twig" %}
+
 {% block content %}
     <h2>Lista wszystkich aktorów</h2>
-    <ul>
-        {% for aktor in entities %}
-            <li>
-                {{ aktor }}
-                <ul>
-                    {% for film in aktor.filmy %}
-                        <li>
-                            {{ film }}
-                        </li>
-                    {% endfor %}
-                </ul>
-            </li>
-        {% endfor %}
-    </ul>
+    {% include 'MyFrontendBundle:Aktor:_list.html.twig' with {'dane': entities } %}
 {% endblock %}
