--- a/symfonyCRUDlayout/app/Resources/views/base.html.twig
+++ b/symfonyCRUDlayout/app/Resources/views/base.html.twig
@@ -259,10 +259,10 @@
                 <ol>
                     <ul class="nav navbar-nav">
 
-                        <li><a href="#">Strona główna</a></li>
+                        <li><a href="./">Strona główna</a></li>
 
-                        <li><a href="#">Historia</a></li>
-                        <li><a href="#">Skład</a></li>
+                        <li><a href="history">Historia</a></li>
+                        <li><a href="members#">Skład</a></li>
                         <li><a href="#">Galeria</a></li>
                         <li><a href="#">Cssssssssdsds</a></li>
 
