--- a/symfonyCRUDlayout/web/css/fontello-codes.css
+++ b/symfonyCRUDlayout/web/css/fontello-codes.css
@@ -3,3 +3,4 @@
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-gplus:before { content: '\f0d5'; } /* '' */
 .icon-youtube-squared:before { content: '\f166'; } /* '' */
+.icon-instagram:before { content: '\f16d'; } /* '' */
