--- a/symfonyCRUDlayout/web/css/fontello.css
+++ b/symfonyCRUDlayout/web/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?10026387');
-  src: url('../font/fontello.eot?10026387#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?10026387') format('woff2'),
-       url('../font/fontello.woff?10026387') format('woff'),
-       url('../font/fontello.ttf?10026387') format('truetype'),
-       url('../font/fontello.svg?10026387#fontello') format('svg');
+  src: url('../font/fontello.eot?7421782');
+  src: url('../font/fontello.eot?7421782#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?7421782') format('woff2'),
+       url('../font/fontello.woff?7421782') format('woff'),
+       url('../font/fontello.ttf?7421782') format('truetype'),
+       url('../font/fontello.svg?7421782#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?10026387#fontello') format('svg');
+    src: url('../font/fontello.svg?7421782#fontello') format('svg');
   }
 }
 */
@@ -54,8 +54,9 @@
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
+
 .icon-twitter:before { content: '\f099'; font-size: 72px; margin: 40px} /* '' */
 .icon-facebook:before { content: '\f09a'; font-size: 72px; margin: 40px} /* '' */
 .icon-gplus:before { content: '\f0d5'; font-size: 72px; margin: 40px} /* '' */
 .icon-youtube-squared:before { content: '\f166'; font-size: 72px; margin: 40px} /* '' */
+.icon-instagram:before { content: '\f16d'; font-size: 72px; margin: 40px } /* '' */
