--- a/symfonyCRUDlayout/web/css/style.css
+++ b/symfonyCRUDlayout/web/css/style.css
@@ -1,63 +1,63 @@
-body {
-    font-family: "Trebuchet MS", sans-serif;
-}
+/*body {*/
+    /*font-family: "Trebuchet MS", sans-serif;*/
+/*}*/
 
-#wrapper {
-    width: 400px;
-    margin: 0 auto;
-    text-align: center;
-}
+/*#wrapper {*/
+    /*width: 400px;*/
+    /*margin: 0 auto;*/
+    /*text-align: center;*/
+/*}*/
 
-#stopka {
-    clear: both;
-    text-align: center;
-    font-size: 70%;
-    margin: 20px;
-    padding: 20px;
-}
+/*#stopka {*/
+    /*clear: both;*/
+    /*text-align: center;*/
+    /*font-size: 70%;*/
+    /*margin: 20px;*/
+    /*padding: 20px;*/
+/*}*/
 
-#stopka a {
+/*#stopka a {*/
 
-}
+/*}*/
 
-table {
-    border-collapse: collapse;
-    margin: 0 auto;
-    text-align: left;
-    clear: both;
-    border: 1px solid #f4f4f4;
-}
+/*table {*/
+    /*border-collapse: collapse;*/
+    /*margin: 0 auto;*/
+    /*text-align: left;*/
+    /*clear: both;*/
+    /*border: 1px solid #f4f4f4;*/
+/*}*/
 
-td {
-    padding: 2px 20px;
-}
+/*td {*/
+    /*padding: 2px 20px;*/
+/*}*/
 
-th {
-    border: 1px solid black;
-    padding: 2px 20px;
-    background: #023d60;
-    color: #d8f0fe;
-    text-align: center;
-}
-
-
-
-.c {
-    text-align: center;
-}
-
-
-.b {
-    background: #f4f4f4;
-}
+/*th {*/
+    /*border: 1px solid black;*/
+    /*padding: 2px 20px;*/
+    /*background: #023d60;*/
+    /*color: #d8f0fe;*/
+    /*text-align: center;*/
+/*}*/
 
 
 
-a {
-    text-decoration: none;
-}
+/*.c {*/
+    /*text-align: center;*/
+/*}*/
 
-a:hover {
-    text-decoration: underline;
-}
+
+/*.b {*/
+    /*background: #f4f4f4;*/
+/*}*/
+
+
+
+/*a {*/
+    /*text-decoration: none;*/
+/*}*/
+
+/*a:hover {*/
+    /*text-decoration: underline;*/
+/*}*/
 
