--- a/symfonyCRUDimage/app/Resources/views/image/show.html.twig
+++ b/symfonyCRUDimage/app/Resources/views/image/show.html.twig
@@ -13,22 +13,26 @@
                 <th>Filename</th>
                 <td>{{ image.filename }}</td>
             </tr>
-            <tr>
-                <th>Mime</th>
-                <td>{{ image.mime }}</td>
-            </tr>
-            <tr>
-                <th>Contents</th>
-                <td>{{ image.contents }}</td>
-            </tr>
-            <tr>
-                <th>Category</th>
-                <td>{{ image.category }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ image.description }}</td>
-            </tr>
+
+
+            <a href="{{ path('file_show', { 'filename': image.filename }) }}">ttt</a><br/>
+
+            {#<tr>#}
+                {#<th>Mime</th>#}
+                {#<td>{{ image.mime }}</td>#}
+            {#</tr>#}
+            {#<tr>#}
+                {#<th>Contents</th>#}
+                {#<td>{{ image.contents }}</td>#}
+            {#</tr>#}
+            {#<tr>#}
+                {#<th>Category</th>#}
+                {#<td>{{ image.category }}</td>#}
+            {#</tr>#}
+            {#<tr>#}
+                {#<th>Description</th>#}
+                {#<td>{{ image.description }}</td>#}
+            {#</tr>#}
         </tbody>
     </table>
 
