--- a/symfonyCRUDimage/app/Resources/views/base.html.twig
+++ b/symfonyCRUDimage/app/Resources/views/base.html.twig
@@ -278,12 +278,12 @@
 
                         <li><a href="./history">Historia</a></li>
                         <li><a href="./members">Skład</a></li>
-                        <li><a href="http://localhost/symfonyCRUDlayout/web/app_dev.php/history">Galeria</a></li>
+                        <li><a href="http://localhost/symfonyCRUDimage/web/app_dev.php/gallery">Galeria</a></li>
                         <li><a href="#">Cssssssssdsds</a></li>
 
                         <li><a href="#">Linus Torvalds</a></li>
                         {#<li><a href="#">Linus Torvalds</a></li>#}
-                        <li><a href="http://localhost/symfonyCRUDlayout/web/app_dev.php/contact">Kontakt</a></li>
+                        <li><a href="http://localhost/symfonyCRUDimage/web/app_dev.php/contact">Kontakt</a></li>
 
                     </ul>
                 </ol>
