--- a/symfonyCRUDimage/app/Resources/views/image/upload.html.twig
+++ b/symfonyCRUDimage/app/Resources/views/image/upload.html.twig
@@ -15,8 +15,8 @@ upload
 
 {#{{ name }}#}
 {#<br />#}
-{{ mimeType }}
+{#{{ mimeType }}#}
 {#<br />#}
 {{ content }}
 
-<img src='data:image/jpeg;base64,{{ content | join}}'/>
+{#<img src='data:image/jpeg;base64,{{ content | join}}'/>#}
