--- a/symfonyCRUDimage/app/Resources/views/image/show.html.twig
+++ b/symfonyCRUDimage/app/Resources/views/image/show.html.twig
@@ -5,36 +5,37 @@
 
     <table>
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ image.id }}</td>
-            </tr>
-            <tr>
-                <th>Filename</th>
-                <td>{{ image.filename }}</td>
-            </tr>
+        <tr>
+            <th>Id</th>
+            <td>{{ image.id }}</td>
+        </tr>
+        <tr>
+            <th>Filename</th>
+            <td>{{ image.filename }}</td>
+            <a href="{{ path('file_show', { 'filename': image.filename }) }}"><img
+                        src="{{ path('file_show', { 'filename': image.filename }) }}  " style="height: 250px"></a>
+            <br/><br/>
+        </tr>
 
-
-            <a href="{{ path('file_show', { 'filename': image.filename }) }}">ttt</a><br/>
-            {#<img src="{{ path('file_show', { 'filename': image.filename }) }}"> <br /><br />#}
-            {#<img src='data:image/jpeg;base64,{{ image.contents | join}}'/>#}
-            {#{{ image.contents }}#}
-            {#<tr>#}
-                {#<th>Mime</th>#}
-                {#<td>{{ image.mime }}</td>#}
-            {#</tr>#}
-            {#<tr>#}
-                {#<th>Contents</th>#}
-                {#<td>{{ image.contents }}</td>#}
-            {#</tr>#}
-            {#<tr>#}
-                {#<th>Category</th>#}
-                {#<td>{{ image.category }}</td>#}
-            {#</tr>#}
-            {#<tr>#}
-                {#<th>Description</th>#}
-                {#<td>{{ image.description }}</td>#}
-            {#</tr>#}
+        {#<img src="{{ path('file_show', { 'filename': image.filename }) }}"> <br /><br />#}
+        {#<img src='data:image/jpeg;base64,{{ image.contents | join}}'/>#}
+        {#{{ image.contents }}#}
+        {#<tr>#}
+        {#<th>Mime</th>#}
+        {#<td>{{ image.mime }}</td>#}
+        {#</tr>#}
+        {#<tr>#}
+        {#<th>Contents</th>#}
+        {#<td>{{ image.contents }}</td>#}
+        {#</tr>#}
+        {#<tr>#}
+        <th>Category</th>
+        <td>{{ image.category }}</td>
+        </tr>
+        <tr>
+        <th>Description</th>
+        <td>{{ image.description }}</td>
+        </tr>
         </tbody>
     </table>
 
@@ -47,7 +48,7 @@
         </li>
         <li>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+            <input type="submit" value="Delete">
             {{ form_end(delete_form) }}
         </li>
     </ul>
