--- a/symfonyCRUDimage/app/Resources/views/image/index.html.twig
+++ b/symfonyCRUDimage/app/Resources/views/image/index.html.twig
@@ -9,6 +9,7 @@
                 <th>Id</th>
                 <th>Filename</th>
                 <th>Mime</th>
+                <th>Status</th>
                 <th>Contents</th>
                 <th>Category</th>
                 <th>Description</th>
@@ -21,10 +22,13 @@
                 <td><a href="{{ path('image_show', { 'id': image.id }) }}">{{ image.id }}</a></td>
                 <td>{{ image.filename }}</td>
                 <td>{{ image.mime }}</td>
+                <td>{{ image.status }}</td>
                 {#<td>{{ image.contents }}</td>#}
                 <td><a href="{{ path('file_show', { 'filename': image.filename }) }}"><img
                             src="{{ path('file_show', { 'filename': image.filename }) }}  " style="height: 250px"></a>
                 </td>
+                {#<a href="{{ path('file_show', { 'filename': image.filename }) }}">sss#}
+                    {#<img src="{{ path('file_show', { 'filename': image.filename }) }}  " style="height: 250px"></a>#}
                 <td>{{ image.category }}</td>
                 <td>{{ image.description }}</td>
                 <td>
