--- a/symfonyCRUDg/src/MyFrontendBundle/Resources/views/Default/gallery.html.twig
+++ b/symfonyCRUDg/src/MyFrontendBundle/Resources/views/Default/gallery.html.twig
@@ -5,9 +5,9 @@
 
 {#<a href="{{ path('tasks_new') }}"> Login</a>#}
 {# total items count #}
-<div class="count">
+{#<div class="count">#}
     {#{{ pagination.getTotalItemCount }}#}
-</div>
+{#</div>#}
 
          {#sorting of properties based on query components#}
         {#<th>{{ knp_pagination_sortable(pagination, 'Id', 'a.id') }}</th>#}
@@ -18,24 +18,24 @@
 
 
 
-    {% for image in pagination %}
+    {#{% for image in pagination %}#}
 
-            <div class="col-md-3">
-                <a href="{{ path('file_show', { 'filename': image.filename }) }}" class="thumbnail" >
-                    <img class= "img-responsive" src="{{ path('file_show', { 'filename': image.filename }) }}" alt="..." style="height: 180px">
-                </a>
-            </div>
+            {#<div class="col-md-3">#}
+                {#<a href="{{ path('file_show', { 'filename': image.filename }) }}" class="thumbnail" >#}
+                    {#<img class= "img-responsive" src="{{ path('file_show', { 'filename': image.filename }) }}" alt="..." style="height: 180px">#}
+                {#</a>#}
+            {#</div>#}
 
 
 
-    {% endfor %}
+    {#{% endfor %}#}
 
-<div class="col-md-12">
+{#<div class="col-md-12">#}
 {# display navigation #}
 
-<div class="navigation" style="text-align: center;bottom:0;">
-    {{ knp_pagination_render(pagination) }}
-</div>
-</div>
-
+{#<div class="navigation" style="text-align: center;bottom:0;">#}
+    {#{{ knp_pagination_render(pagination) }}#}
+{#</div>#}
+{#</div>#}
+    <li><a href="{{ path('film_index') }}">Lista filmów</a></li>
 {% endblock %}
