--- a/symfonyCRUDgg/src/MyFrontendBundle/Resources/views/Gallery/_list.html.twig
+++ b/symfonyCRUDgg/src/MyFrontendBundle/Resources/views/Gallery/_list.html.twig
@@ -10,7 +10,7 @@
                 {#{{ film.descriptionn }}#}
             <div class="col-md-3">
                 <a href="{{ path('film_show', { 'id': film.id }) }}" class="thumbnail" >
-                <img class= "img-responsive" src="{{ path('file_show', { 'filename': film.filenamee }) }}" alt="..." style="height: 180px">
+                <img class= "img-responsive" src="{{ path('filee_show', { 'filename': film.filenamee }) }}" alt="..." style="height: 180px">
                 </a>
                 {{ film.descriptionn }}
                 </div>
