--- a/symfony3apk/app/Resources/views/contactdetails/index.html.twig
+++ b/symfony3apk/app/Resources/views/contactdetails/index.html.twig
@@ -9,6 +9,7 @@
                 <th>Isdeleted</th>
                 <th>Value</th>
                 <th>Id</th>
+                <th>fieldtype</th>
                 <th>Actions</th>
             </tr>
         </thead>
