crud three tables

--- a/symfonyuse/app/Resources/views/base.html.twig
+++ b/symfonyuse/app/Resources/views/base.html.twig
@@ -11,6 +11,7 @@
 <ul>
     <li><a href="{{ path('contacts_index') }}">Dodaj osobę</a></li>
     <li><a href="{{ path('contactdetails_index') }}">Dodaj rodzaj kontaktu</a></li>
+    {#<li><a href="{{ path('contactvalue_new') }}">Dodaj rodzaj kontaktu</a></li>#}
 
     {#<li><a href="{{ path('fieldtypes_index') }}">FieldTypes</a></li>#}
 </ul>
