--- a/symfonyuse/app/Resources/views/contactdetails/show.html.twig
+++ b/symfonyuse/app/Resources/views/contactdetails/show.html.twig
@@ -1,36 +1,24 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>ContactDetails</h1>
+    <h1>Dodano rodzaj kontaktu</h1>
 
     <table>
         <tbody>
             <tr>
-                <th>Isdeleted</th>
-                <td>{% if contactDetail.isDeleted %}Yes{% else %}No{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Value</th>
-                <td>{{ contactDetail.value }}</td>
-            </tr>
-            <tr>
                 <th>Id</th>
                 <td>{{ contactDetail.id }}</td>
+            </tr>
+            <tr>
+                <th>Imię i nazwisko</th>
+                <td>{{ contactDetail.contact }}</td>
             </tr>
         </tbody>
     </table>
 
     <ul>
         <li>
-            <a href="{{ path('contactdetails_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('contactdetails_edit', { 'id': contactDetail.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
+            <a href="{{ path('contactdetails_index') }}">Wróc do listy</a>
         </li>
     </ul>
 {% endblock %}
