--- a/symfonyuse/app/Resources/views/contacts/index.html.twig
+++ b/symfonyuse/app/Resources/views/contacts/index.html.twig
@@ -7,15 +7,15 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Firstname</th>
-                <th>Lastname</th>
-
+                <th>Imie</th>
+                <th>Nazwisko</th>
+                <th>Status</th>
 
             </tr>
         </thead>
         <tbody>
         {% for contact in contacts %}
-           {% if contact.isDeleted != 1 %}
+
 
 
             <tr>
@@ -23,11 +23,10 @@
                 <td>{{ contact.firstname }}</td>
                 <td>{{ contact.lastname }}</td>
                 <td>{{ contact.isDeleted }}</td>
-                <td>
+                <td>{% if contact.isDeleted %}Usunięty{% else %}Nie usunięty{% endif %}</td>
 
-                </td>
             </tr>
-           {% else %}{% endif %}
+
         {% endfor %}
         </tbody>
     </table>
