--- a/symfonyuse/app/Resources/views/base.html.twig
+++ b/symfonyuse/app/Resources/views/base.html.twig
@@ -10,10 +10,7 @@
 <h2>Aplikacja typu CRUD - Edycja danych w tabelach</h2>
 <ul>
     <li><a href="{{ path('contacts_index') }}">Dodaj osobę</a></li>
-    <li><a href="{{ path('contactdetails_index') }}">Dodaj rodzaj kontaktu</a></li>
-    {#<li><a href="{{ path('contactvalue_new') }}">Dodaj rodzaj kontaktu</a></li>#}
-
-    {#<li><a href="{{ path('fieldtypes_index') }}">FieldTypes</a></li>#}
+    <li><a href="{{ path('contactdetails_index') }}">Dodaj kontakt</a></li>
 </ul>
 {% block body %}{% endblock %}
 </body>
