--- a/symfonyuse/app/Resources/views/contactdetails/edit.html.twig
+++ b/symfonyuse/app/Resources/views/contactdetails/edit.html.twig
@@ -5,12 +5,12 @@
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
+        <input type="submit" value="Zapisz" />
     {{ form_end(edit_form) }}
 
     <ul>
         <li>
-            <a href="{{ path('contactdetails_index') }}">Back to the list</a>
+            <a href="{{ path('contactdetails_index') }}">Powrót do listy</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
