--- a/symfonyuse/app/Resources/views/contactdetails/new.html.twig
+++ b/symfonyuse/app/Resources/views/contactdetails/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Dodawanie rodzaju kontaktu</h1>
+    <h1>Dodawanie nowego kontaktu</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
