--- a/symfonyuse/app/Resources/views/contactdetails/index.html.twig
+++ b/symfonyuse/app/Resources/views/contactdetails/index.html.twig
@@ -5,33 +5,65 @@
 
     <table>
         <thead>
-            <tr>
-                {#<th>Isdeleted</th>#}
-                <th><div class="col-md-3"><p>Osoba</p></div></th>
-                <th><div class="col-md-6"><p>Kontakt</p></div></th>
+        <tr>
 
-            </tr>
+            <th>
+                <p>Osoba</p>
+            </th>
+            <th>
+                <p>Kontakt</p>
+            </th>
+
+
+        </tr>
         </thead>
         <tbody>
         {% for contactDetail in contactDetails %}
             <tr>
-                <td><div class="col-md-3"><p>{{ contactDetail.contact }}</p></div></td>
-                {#<td><div class="col-md-6"><p>{{ contactDetail.value }}</p></div></td>#}
-                <td>{% if contactDetail.value == '0' or contactDetail.value == null %}
+                <td>
+                    <p>{{ contactDetail.contact }}</p>
+                </td>
+
+                <td><p>
+
+                    {% if contactDetail.value == '0' or contactDetail.value == null %}
                         Brak kontaktu
 
 
-                    {% else %}{{ contactDetail.value }}{% endif %}</td>
-                {#<td>{{ contactDetail.fieldType.fieldType }}</td>#}
-                {#<td>{% if contactDetail.contact.isDeleted %}Usunięty{% else %}Nie usunięty{% endif %}</td>#}
+                    {% else %} {% if contactDetail.fieldType.fieldType == 'phone' %}
+                        Telefon <br />
 
-                {#<td>#}
-                    {#<a href="{{ path('contact_value', { 'id': contactDetail.fieldType.id, 'contact': contactDetail.contact.id }) }}">Dodaj</a>#}
-                {#</td>#}
-                <td><div class="col-md-3">
-                    <p><a href="{{ path('contactdetails_edit', { 'id': contactDetail.id }) }}">Dodaj kontakt</a>
-                        </p>
-                </div></td>
+
+                    {% else %}{% endif %}
+                        {% if contactDetail.fieldType.fieldType == 'mobile' %}
+                            Mobile <br />
+
+
+                        {% else %}{% endif %}
+                        {% if contactDetail.fieldType.fieldType == 'email' %}
+                            Email <br />
+
+
+                        {% else %}{% endif %}
+                        {% if contactDetail.fieldType.fieldType == 'homepage_uri' %}
+                            WWW <br />
+
+
+                        {% else %}{% endif %}
+                        {% if contactDetail.fieldType.fieldType == 'note' %}
+                            Note <br />
+
+
+                        {% else %}{% endif %}{{ contactDetail.value }}{% endif %} </p>
+                </td>
+
+
+                <td>
+
+                    <a href="{{ path('contactdetails_edit', { 'id': contactDetail.id }) }}">Dodaj kontakt</a>
+
+
+                </td>
             </tr>
         {% endfor %}
         </tbody>
@@ -42,4 +74,5 @@
             <a href="{{ path('contactdetails_new') }}">Dodaj nowy kontakt</a>
         </li>
     </ul>
+
 {% endblock %}
