crud three tables

--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -258,7 +258,7 @@
 
     {#{% block carousel %} {% endblock %}#}
 
-    {{ render(controller('MyFrontendBundle:Default:carousel')) }}
+    {{ render(controller('MyFrontendBundle:Image:carousel')) }}
     <!-- navbar
 ================================================== -->
 
@@ -348,7 +348,7 @@
         <div class="row" style="text-align: center; background-color: #8c8c8c">
             <div class="col-md-12">
                 <p style="padding: 20px;">orkietstra.com &copy; 2016 Developed<a href="http://krzysztofsikora24.pl">
-                        Krzysztof Sikora </a>
+                        Krzysztof Sikora </a><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/panel">Panel</a>
                 </p>
 
             </div>
