--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/panel.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/panel.html.twig
@@ -4,13 +4,11 @@
 <!-- Carousel
 ================================================== -->
 
-<a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/tasks">Posty</a>
-<a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/image">Zdjęcia</a>
-<a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/albums">Albumy</a>
-<a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/albums">Skład</a>
 
-<div class="container-fluid">
-    <div class="row" style="text-align: center; background-color: #5e5e5e;">
+
+    <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a>
+
+    <div class="row" style="text-align: center">
 
 
         <div class="col-md-3">
