--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/carousel.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/carousel.html.twig
@@ -1,67 +1,51 @@
-{#{% extends 'base.html.twig' %}#}
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-{#{% block carousel %}#}
-    <!-- Carousel
-    ================================================== -->
-    {#<div id="myCarousel" class="carousel slide" data-ride="carousel">#}
-        {#<!-- Indicators -->#}
-        {#<ol class="carousel-indicators">#}
-            {#<li data-target="#myCarousel" data-slide-to="0" class="active"></li>#}
-            {#<li data-target="#myCarousel" data-slide-to="1"></li>#}
-            {#<li data-target="#myCarousel" data-slide-to="2"></li>#}
-        {#</ol>#}
-        {#<div class="carousel-inner" role="listbox">#}
-            {#<div class="item active">#}
-                {#<img class="first-slide" style="margin: auto" src="{{ asset("images/traba.jpg") }}" alt="First slide">#}
-                {#<div class="container">#}
-                    {#<div class="carousel-caption">#}
-                        {#<h1></h1>#}
-                        {#<p></p>#}
-                        {#<p></p>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-            {#<div class="item">#}
-                {#<img class="second-slide" style="margin: auto" src="{{ asset("images/traba.jpg") }}" alt="Second slide">#}
-                {#<div class="container">#}
-                    {#<div class="carousel-caption">#}
-                        {#<h1></h1>#}
-                        {#<p></p>#}
-                        {#<p></p>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-            {#<div class="item">#}
-                {#<img class="third-slide" style="margin: auto" src="{{ asset("images/traba.jpg") }}" alt="Third slide">#}
-                {#<div class="container">#}
-                    {#<div class="carousel-caption">#}
-                        {#<h1></h1>#}
-                        {#<p></p>#}
-                        {#<p></p>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-        {#</div>#}
-        {#<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">#}
-            {#<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>#}
-            {#<span class="sr-only">Previous</span>#}
-        {#</a>#}
-        {#<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">#}
-            {#<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>#}
-            {#<span class="sr-only">Next</span>#}
-        {#</a>#}
-    {#</div><!-- /.carousel -->#}
+    <div class="carousel-inner" role="listbox">
+
+        {% set it = 0 %}
+        {% for image in images %}
+            {% if image.status == 1 %}
+                {% set it = it + 1 %}
+                {% if it == 1 %}
+                    {#{{ loop.index }}#}
+                    {#{{ image.id }}#}
+                    {#{{ it }}#}
+
+                    <div class="item active">
+                        <img class="first-slide" style="margin: auto"
+                             src="{{ path('file_show', { 'filename': image.filename }) }}" alt="First slide">
+                        <div class="container">
+                            <div class="carousel-caption">
+                                <h1></h1>
+                                <p></p>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+
+                {% else %}
+                    <div class="item">
+                        <img class="second-slide" style="margin: auto"
+                             src="{{ path('file_show', { 'filename': image.filename }) }}" alt="Second slide">
+                        <div class="container">
+                            <div class="carousel-caption">
+                                <h1></h1>
+                                <p></p>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>{% endif %}
+            {% else %}{% endif %}
+        {% endfor %}
 
 
-
-{% for image in images %}
-
-    {{ image }}
-    {% if image.status == 1 %}phoneeee
-
-       {{ image.description }}
-        {% else %}{% endif %}
-
-
-{% endfor %}
-{#{% endblock %}#}
+    </div>
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div><!-- /.carousel -->
