--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Gallery/show.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Gallery/show.html.twig
@@ -33,7 +33,7 @@
         <link href="https://cdn.rawgit.com/sachinchoolur/lightgallery.js/master/dist/css/lightgallery.css" rel="stylesheet">
         <style>
             body{
-                background-color: #152836
+                /*background-color: #152836*/
             }
             .demo-gallery > ul {
                 margin-bottom: 0;
@@ -151,12 +151,12 @@
             }
         </style>
 
-    <body class="home">
+
 
     <div class="demo-gallery">
         <ul id="lightgallery" class="list-unstyled row">
             {% for e in entity %}
-            <li class="col-xs-6 col-sm-4 col-md-3" data-responsive="" data-src="{{ path('file_show', { 'filename': e.filename }) }}" data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>" data-pinterest-text="Pin it1" data-tweet-text="share on twitter 1">
+            <li class="col-xs-6 col-sm-4 col-md-3" data-responsive="" data-src="{{ path('file_show', { 'filename': e.filename }) }}" data-sub-html="<h4>{{  e.description }}</h4><p> </p>" data-pinterest-text="Pin it1" data-tweet-text="share on twitter 1">
                 <a href="">
                     <img class="img-responsive" src="{{ path('file_show', { 'filename': e.filename }) }}" alt="Thumb-1">
                 </a>
@@ -177,7 +177,7 @@
     <script>
         lightGallery(document.getElementById('lightgallery'));
     </script>
-    </body>
+
 
 
 
