--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/members.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/members.html.twig
@@ -2,45 +2,42 @@
 
 {% block body %}
     <h1>Członkowie</h1>
-
+{% for squad in pagination %}
     <!-- Comment -->
     <div class="media">
         <a class="pull-left">
-            <img class="media-object" src="{{ asset('images/slawek.jpg') }}" width="128px">
+            <img class="media-object" src="{{ path('fileee_show', { 'filename': squad.filenameee }) }}" width="128px">
         </a>
         <div class="media-body">
-            <h4 class="media-heading">Sławek Pacholski
-                <small>Głównodowodzący orkiestrą</small>
+            <h4 class="media-heading">{{ squad.name }}
+                <small>{{ squad.descriptionnn }}</small>
             </h4>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            {{ squad.info }}
         </div>
+    </div>
+{% endfor %}
+
+        {#<tr {% if loop.index is odd %}class="color"{% endif %}>#}
+        {#<td>{{ article.id }}</td>#}
+        {#<td>{{ article.title }}</td>#}
+        {#<td>{{ article.description }}</td>#}
+        {#<td>{{ article.posted|date('Y-m-d H:i:s') }}</td>#}
+
+        {#</tr>#}
+
+       {#{{ squad|join }}#}
+        {#<div class="col-md-3">#}
+        {#<a href="{{ path('fileee_show', { 'filename': squad.filenameee }) }}" class="thumbnail" >#}
+        {#<img class= "img-responsive" src="{{ path('fileee_show', { 'filename': squad.filenameee }) }}" alt="..." style="height: 180px">#}
+        {#</a>#}
+        {#</div>#}
+
+
+
+    <div class="navigation" style="text-align: center;bottom:0;">
+        {{ knp_pagination_render(pagination) }}
     </div>
 
-    <!-- Comment -->
-    <div class="media">
-        <a class="pull-left">
-            <img class="media-object" src="{{ asset('images/slawek.jpg') }}" width="128px">
-        </a>
-        <div class="media-body">
-            <h4 class="media-heading">Sławek Pacholski
-                <small>Głównodowodzący orkiestrą</small>
-            </h4>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-        </div>
-    </div>
-
-    <!-- Comment -->
-    <div class="media">
-        <a class="pull-left">
-            <img class="media-object" src="{{ asset('images/slawek.jpg') }}" width="128px">
-        </a>
-        <div class="media-body">
-            <h4 class="media-heading">Sławek Pacholski
-                <small>Głównodowodzący orkiestrą</small>
-            </h4>
-            Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-        </div>
-    </div>
 
 
 
